II. Conception et Mise en Place d’un Pipeline CICD Multi-environnements/2.2.1 Mise en place d’un environnement de dev local Kubernetes/myevent-namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myevent-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: myevent-qualif
