II. Conception et Mise en Place d’un Pipeline CICD Multi-environnements/2.2.1 Mise en place d’un environnement de dev local Kubernetes/myevent-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myevent-service
  namespace: myevent-prod
spec:
  type: NodePort
  selector:
    app: myevent
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: myevent-service
  namespace: myevent-qualif
spec:
  type: NodePort
  selector:
    app: myevent
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30003
