II. Conception et Mise en Place d’un Pipeline CICD Multi-environnements/2.2.1 Mise en place d’un environnement de dev local Kubernetes/myevent-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myevent-ingress
  namespace: myevent-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myevent-prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myevent-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myevent-ingress
  namespace: myevent-qualif
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myevent-qualif.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myevent-service
            port:
              number: 80
